# waterloo-eng-projects

./: README.md
autonomous_robots_mte544/: .gitignore  README.md
autonomous_robots_mte544/assignments/: requirements.txt
autonomous_robots_mte544/kalman_filter/: kalman.py  main.py  preprocess.py
autonomous_robots_mte544/prelabs/: prelab1.sh
autonomous_robots_mte544/ros_catkin_ws/src/turtle_pub/: CMakeLists.txt  package.xml
autonomous_robots_mte544/ros_catkin_ws/src/turtle_pub/launch/: turtle_pub.launch
autonomous_robots_mte544/ros_catkin_ws/src/turtle_pub/scripts/: turtle_publisher.py
carla_docker_ros_simulation_me599/: README.md
carla_docker_ros_simulation_me599/scripts/: README.md
coop_adaptive_algos_ece457a/: .gitignore  README.md  requirements.txt
coop_adaptive_algos_ece457a/astar/: README.md
coop_adaptive_algos_ece457a/breadth_depth_search/: README.md  main.py
coop_adaptive_algos_ece457a/genetic_algorithm/: main.py
coop_adaptive_algos_ece457a/random_search/: README.md
coop_adaptive_algos_ece457a/simulated_annealing/: .gitignore  README.md  main.py
coop_adaptive_algos_ece457a/tabu_search/: README.md  main.py  ringbuf.py
digital_control_ece484/: .gitignore  README.md
performance_programming_ece459/: .gitignore  README.md
performance_programming_ece459/a1_package_management/: .gitignore
performance_programming_ece459/a2_building_dictionaries/: .gitignore  Cargo.toml  benchmarks.txt
performance_programming_ece459/a4_profiling/: .gitignore  Cargo.toml  Makefile  baseline.md  cli.py  evaluate.sh  performance.sh
(+179 files in other folders)
